--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.9",
+    "@vue/runtime-core": "^3.2.37",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.14",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0"
   },
