--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "element-plus": "^2.2.14",
+    "node-sass": "^7.0.1",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0"
   },
@@ -26,6 +27,7 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "sass-loader": "^13.0.2",
     "typescript": "~4.5.5"
   }
 }
